--- a/contact-app/package.json
+++ b/contact-app/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@types/react": "^18.3.1",
@@ -24,6 +28,9 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
+    "react-router-dom": "^6.23.1",
+    "sharp": "^0.33.4",
+    "sharp-ico": "^0.1.5",
     "tailwindcss": "^3.4.4",
     "vite": "^5.2.10",
     "vite-plugin-pwa": "^0.20.0",
